<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5AEAFB"
    android:padding="16dp">

    <!-- Title Text -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="22dp"
        android:gravity="center"
        android:text="@string/enter_two_numbers"
        android:textSize="30sp" />

    <!-- Input Fields -->
    <EditText
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/textView"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:padding="10dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/firstNum"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:padding="10dp"
        android:autofillHints="" />

    <!-- Operation Buttons -->
    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondNum"
        android:layout_marginTop="28dp">

        <Button
            android:id="@+id/addButton"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_margin="4dp"
            android:text="@string/add"
            android:background="@color/button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/subButton"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toEndOf="@id/addButton"
            android:text="@string/sub"
            android:background="@color/button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toEndOf="@id/subButton"
            android:text="@string/multiply"
            android:background="@color/button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_toEndOf="@id/multiplyButton"
            android:text="@string/divide"
            android:background="@color/button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="110dp"
            android:layout_height="61dp"
            android:layout_margin="4dp"
            android:layout_toEndOf="@id/divideButton"
            android:text="@string/clear"
            android:background="@color/button"
            android:textSize="14sp" />
    </RelativeLayout>

    <!-- Result Display -->
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/buttons"
        android:layout_margin="22dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/result"
        android:layout_margin="22dp"
        android:gravity="center"
        android:text="0.0"
        android:textSize="28sp" />

</RelativeLayout>