<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/lightGray"
    android:padding="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Login Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Email Field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardExpirationDate"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <!-- Password Field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- Remember Me Checkbox -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me" />

        </LinearLayout>

        <!-- Login Button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/pink"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <!-- Forgot Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <!-- OR Separator -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/or"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />
        </LinearLayout>

        <!-- Social Media Login -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_google" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_linkedin" />
        </LinearLayout>

        <!-- Sign Up Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/need_an_account_sign_up"
            android:textColor="@color/blue"
            android:textSize="14sp" />

    </LinearLayout>
    <!--    </androidx.cardview.widget.CardView>-->

</LinearLayout>
